# -KBTU2024-HighLoad-Final

./: README.md  docker-compose.yml
database/: .env.example
database/config/: postgresql.conf
docs/: asynchronous_processing.md  db_optimization.md  distributed_systems.md  fault_tolerance.md  performance_tuning.md  scaling.md  security.md
e-commerce/: .env.example  Dockerfile  pyproject.toml  pytest.ini
e-commerce/_auth/: urls.py  views.py
e-commerce/config/: celery.py  settings.py  urls.py
e-commerce/core/: admin.py  tasks.py  tests.py  urls.py  utils.py
e-commerce/core/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options_review.py  0003_order_orderitem_payment_shoppingcart_cartitem_and_more.py  0004_alter_order_options_alter_review_unique_together_and_more.py
e-commerce/core/models/: orders.py  products.py  shopping.py
e-commerce/core/views/: orders.py  products.py  shopping.py
e-commerce/runners/: django-entrypoint.sh
gitlab-runner/config/: config.toml
monitoring/prometheus/: prometheus.yml
nginx/: nginx.conf
